# rust-interop

./: .gitignore
.github/workflows/: book.yml
book/: book.toml
book/src/: SUMMARY.md  c-intro.md  chapter_00.md  chapter_01-01.md  chapter_01.md  index.md
book/src/c/: callbacks.md  calling-from-c.md  cbindgen.md  initial.md  parameter-and-return.md  shared-types.md  transferring-ownership.md
c/chap1/: CMakeLists.txt
c/chap1/src/: main.c
c/chap2/: Cargo.toml
c/chap2/src/: lib.rs  main.c
c/chap3/: CMakeLists.txt
c/chap3/src/: lib.rs  main.c
c/chap3/src/modules/file/: file.c
c/chap4/: CMakeLists.txt
c/chap4/src/: lib.rs  main.c
c/chap4/src/modules/file/: file.c  file.h
c/chap5/src/: lib.rs  main.c
c/chap5/src/modules/file/: file.h
c/chap6/: CMakeLists.txt  build.rs
c/chap6/src/: lib.rs  main.c
c/chap6/src/modules/: csv.rs
c/chap6/src/modules/file/: file.c
c/chap7/: CMakeLists.txt  Cargo.toml  build.rs
c/chap7/src/: lib.rs  main.c
c/chap7/src/modules/: csv.rs
c/chap7/src/modules/file/: mod.rs
